# install-openvino-action

./: .gitignore  CONTRIBUTING.md  README.md  action.yml  install.sh  main.js  package-lock.json  package.json
.github/workflows/: main.yml
integration-tests/: Cargo.toml  check-installation.sh
integration-tests/src/: main.rs
src/: apt.sh  download.js  filetree.js  runner.js
tests/: filetree.json  filetree.test.js  runner.test.js
